nano-src/assets/css/contact_us.css
article,.article-display{
margin: 0 auto;
}























.all{
    background-color: #FFFFFF;
    width: 1000px;
    height: auto;
    display: flex;
    margin-top: 100px;
    margin-bottom: 100px;
    position: relative;
    left: 50%;
    margin-left: 0px;
    transform: translateX(-50%);
}
.left{
	
	flex-direction:column;
	
    width: 500px;
    height: 670px;
}
.left-first{
	width: 475px;
    text-align: left;
    display: flex;
}
.left-first img{
	width: 24px;
	height: 24px;
	display: inline-block;
	
}
.left-first-span{
    width: 450px;
    height: 38px;
	font-family: Roboto-Regular;
font-size: 15px;
letter-spacing: 0;
text-align: left;
line-height: 19px;
}
.left-second{
	width: 480px;

}
.demo2{
  height: 230px;
  display: flex;   
  margin-top: 20px; 
  margin-left: 5px;           
  justify-content:center;
}

.demo2 input{
    font-family: PingFangSC-Regular;
font-size: 14px;
color: #999999;
letter-spacing: 0;
text-align: left;

}
  .inner{
  
    height: 230px;
    width: 240px;
    font-size: 14px;
    display: flex;
    flex-direction: column;
    margin: 0px 8px 0px 0px;
  }
  .inner2{
    height: 230px;
    width: 240px;
    font-size: 26px;
    margin: 0px 0px 0px 0px;
    display: flex;
    flex-direction: column;
  }
  .input{
      height: 50px;
      width: 210px; 
      margin: 0px 8px 10px 0px;
      background: #FAFAFA;
    border-radius: 6px;
  }
 .input3{
    background: #FAFAFA;
}
.left-third{
	width: 480px;
	height: 200px;
	
}
.left-fourth{
	width: 480px;
	height: 100px;
	
}
.undertable{
    background-color: #FFF;
    height: auto;
    width: 480px;
    margin: 0px auto 20px auto;
}
.tablespan{
    font-family: PingFangSC-Regular;
font-size: 16px;
color: #999999;
letter-spacing: 0;
text-align: left;
}
.article-buttom{
    text-align:left;
    height: 20px;
    margin-top:20px;
    display: inline-block;
}
.checkbox{
    width: 10px;
    height: 10px;
}
#btndiv{
    margin-top: 30px;
}
.btn-content{
    color: #FFFFFF; font-size: 20px;
    letter-spacing: 0;
    font-family: PingFangSC-Regular;
    width: 160px;
    height: 50px;
    background-image: url(../assets/content_button3.png);
    border: none;
}
.btn-content input{
    color: #FFFFFF;
text-align: center;
}



.right{
	flex-direction:column;
	background: #F5F7F8;
border-radius: 6px;
    width: 500px;
    height: 670px;
}
.right-first{
	width: 378px;
	height: 40px;
	}
.right-first p{
    margin-left: 30px;
    margin-top: 30px;
    font-size:24px;
	font-family: Roboto-Bold;
color: #303136;
letter-spacing: 0.11px;
}
.right-second{
	width: 480px;
	height: 230px;
	
}
.text{
   
   
    border-radius: 6px;
    width: 430px;
    height: 560px;
    margin-left: 30px;
    margin-right: 30px;
    text-align: left;
}


.text span1{
    /* display:inline-block; */
    margin-left: 60px;
    height: 30px;
    width: 300px;
    margin-left: 103px;
    margin-right: 648px;
    font-family: PingFangSC-Regular;
font-size: 22px;
color: #0A1017;
letter-spacing: 0;
text-align: left;

}
.text p{
    margin-left: 52px;
    margin-top: 13px;
    height: 48px;
    width: 385px;
    font-family: PingFangSC-Regular;
font-size: 12px;
color: #606470;
letter-spacing: 0;
text-align: left;
line-height: 24px;
}
.text span2{
    margin-left: 52px;
    font-family: PingFangSC-Regular;
font-size: 14px;
color: #0086D1;
letter-spacing: 0;
text-align: left;
line-height: 26px;
}
.text span3{ 
font-family: PingFangSC-Regular;
font-size: 14px;
color: #606470;
letter-spacing: 0;
text-align: left;
line-height: 26px;
}

.contact-flag-cn  {
border: none;
width:32px;
height:31px;
display:inline-block;
vertical-align:-40%;
background:url("../assets/content_gq1.png");
margin-right: 12px;
}

.contact-flag-phone
{
    width:12px;
    height:12px;
display:inline-block;
background:url("../assets/content_icon6.png");
vertical-align:5%;
margin-top:30px;
margin-left: 20px;
margin-right: 18px;

}
.contact-flag-phone span{
	font-family: Roboto-Regular;
font-size: 14px;
color: #0086D1;
letter-spacing: 0;
text-align: left;
line-height: 26px;
}
.contact-flag-web
{
    width:14px;
    height:14px;
display:inline-block;
background:url("../assets/www.png");
vertical-align: 0%;
margin-left: 20px;
margin-right: 18px;
}
.contact-flag-in
{
    width:34px;
    height:33px;
    background:url("../assets/content_gq2.png");
    display:inline-block;
    vertical-align:-60%;
    margin-top:10px;  
    margin-right: 20px;   
}
.contact-flag-us
{
    width:32px;
    height:32px;
background:url("../assets/content_gq4.png");
display:inline-block;
vertical-align:bottom;
margin-top:20px;
margin-right: 20px;
}
input:focus
{
  color:black;
}
textarea:focus
{
  color:black;
}


input[type="checkbox"] + label {
    cursor: pointer;
    height: 15px;
    width: 15px;
    font-size: 1em;
}
[id^="checkbox-"] + label {
    background-color: #ffffff;
    border: 1px solid #666666;
    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
    padding: 9px;
    border-radius: 3px;
    display: inline-block;
    vertical-align: middle;
}
[id^="checkbox-"] + label:active {
    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
}
[id="checkbox-1"]:checked + label {
    
    background-image: url(../assets/content_button4_elected.png);
   
}

